<resources>
    <string name="app_name" translatable="false">Emoncms</string>
    <string name="google_app_id" translatable="false">605929908164</string>

    <string name="tag_settings_fragment" translatable="false">settings_fragment</string>
    <string name="tag_accounts_fragment" translatable="false">accounts_fragment</string>
    <string name="tag_accounts_settings_fragment" translatable="false">account_settings_fragment</string>


    <string name="tag_me_fragment" translatable="false">myelectric_main_fragment</string>
    <string name="tag_me_settings_fragment" translatable="false">myelectric_settings_fragment</string>
    <string name="tag_ms_fragment" translatable="false">mysolar_main_fragment</string>
    <string name="tag_ms_settings_fragment" translatable="false">mysolar_settings_fragment</string>

    <string name="setting_url" translatable="false">emoncms_url</string>
    <string name="setting_apikey" translatable="false">emoncms_apikey</string>
    <string name="setting_usessl" translatable="false">emoncms_usessl</string>
    <string name="setting_keepscreenon" translatable="false">keep_screen_on</string>
    <string name="setting_language" translatable="false">language</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="dutch" translatable="false">Nederlands</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="ukrainian" translatable="false">Українська</string>

    //
    //  TRANSLATABLE
    //
    <string name="me_title">My Electric</string>
    <string name="me_settings_title">Page Settings</string>

    <string name="ms_title">My Solar</string>
    <string name="ms_settings_title">My Solar Feeds</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cost_label">kWh / Cost</string>
    <string name="power_now_label">Now</string>
    <string name="use_today_label">Today</string>
    <string name="solar_pv_label">SOLAR PV</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="error">Error</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>

    <string name="server_not_configured">Please configure your emoncms server and API key from the settings menu.</string>
    <string name="me_not_configured_text">Please select feeds to display using the cog icon in the toolbar.</string>
    <string name="feed_download_error_message">Unable to download feed list. Please check URL and API settings as well as connectivity to emoncms.</string>
    <string name="invalid_number_of_responses">Invalid number of responses from API</string>
    <string name="invalid_kwh_feedid">Invalid use_kwh feed ID, please select a kwh feed from the configuration menu</string>
    <string name="invalid_watt_feedid">Invalid use feed ID, please select a watt feed from the configuration menu</string>

    <string name="txt_power_default">0W</string>
    <string name="use_today_default">0.0kWh</string>

    <string name="button_3h_label">3H</string>
    <string name="button_6h_label">6H</string>
    <string name="button_1d_label">D</string>
    <string name="button_7d_label">W</string>
    <string name="button_30d_label">M</string>

    <string name="connection_error">CONNECTION ERROR</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">The barcode scanner uses the camera and cannot run because it does not have permission.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="qr_code_success">Settings saved from QR code successfully</string>
    <string name="qr_code_fail">Invalid QR code</string>
    <string name="barcode_scan_instructions">"Scan the barcode on the My account page of emoncms."</string>

    <string name="monday_initial">Mo</string>
    <string name="tuesday_initial">Tu</string>
    <string name="wednesday_initial">We</string>
    <string name="thursday_initial">Th</string>
    <string name="friday_initial">Fr</string>
    <string name="saturday_initial">Sa</string>
    <string name="sunday_initial">Su</string>

    <string name="system_locale">System Locale</string>
    <string name="dollars">Dollars</string>
    <string name="pounds">Pounds</string>
    <string name="euros">Euros</string>
    <string name="yen">Yen</string>
    <string name="custom">Custom</string>

    <string name="kwh_elapsed">kWh elapsed</string>
    <string name="wh_elapsed">Watt hours elapsed</string>

    <string name="chart_no_data_available">No data available</string>

    <string name="settings_title_emoncms_connectivity">EMONCMS CONNECTIVITY</string>
    <string name="settings_title_accounts">ACCOUNTS</string>
    <string name="settings_title_app_settings">GENERAL SETTINGS</string>
    <string name="settings_title_scanqrcode">Scan QR Code</string>
    <string name="settings_summary_scanqrcode">Allows filling in the connectivity fields automatically using the QR code on the emoncms account page</string>
    <string name="settings_title_emoncms_name">Account Name</string>
    <string name="settings_summary_emoncms_name">Short name for the account for easy identification</string>
    <string name="settings_title_delete_account">Delete Account</string>
    <string name="settings_title_add_account">Add Account</string>
    <string name="settings_confirm_delete_account">Are you sure you want to delete this account? All settings will be lost.</string>
    <string name="settings_add_one_account">Add at least one account to proceed</string>

    <string name="settings_title_emoncms_url">emoncms URL</string>
    <string name="settings_summary_emoncms_url">Full emoncms URL without http://. e.g. www.myawesomesite.com/emoncms"</string>
    <string name="settings_title_emoncms_apikey">emoncms API KEY</string>
    <string name="settings_summary_emoncms_apikey">Read API key from the emoncms My Account page.</string>
    <string name="settings_title_emoncms_usessl">Use SSL</string>
    <string name="settings_summary_emoncms_usessl">Connect using https, supported by emoncms.org NOT emonPi"</string>
    <string name="settings_title_keep_screen_on">Keep Screen On</string>
    <string name="settings_summary_keep_screen_on">Stops the device screen powering off</string>
    <string name="settings_title_language">Language</string>
    <string name="settings_summary_language">Select Language</string>

    <string name="settings_title_page_name">Page name</string>
    <string name="settings_title_page_name_default">New page</string>
    <string name="settings_title_myelectric_feeds">Feeds</string>
    <string name="settings_title_myelectric_currency">Currency</string>
    <string name="settings_title_myelectric_custom_currency">Custom currency</string>
    <string name="settings_title_myelectric_page_name">Page Name</string>
    <string name="settings_title_myelectric_power_feed">Power feed (Watts)</string>
    <string name="settings_title_myelectric_kwh_feed">"Bar graph feed (kWh)</string>
    <string name="settings_title_myelectric_escale">Wh or kWh Feed</string>
    <string name="settings_title_myelectric_unit_cost">Cost</string>
    <string name="settings_title_myelectric_cost_symbol">Cost Unit</string>
    <string name="settings_title_delete_page">Delete Page</string>
    <string name="settings_confirm_delete_page">Are you sure you want to delete this page?</string>


    <string name="system_default">System Default</string>
    <string name="no_camera_found">No camera found for barcode scanning.</string>
    <string name="menu_add_page">Add Page</string>

    <string name="settings_title_app_information">APP VERSION: </string>



</resources>
